Introduction, regularized headings within principles

--- a/contents/accessible/dont_just_publish_the_raw_data.tex
+++ b/contents/accessible/dont_just_publish_the_raw_data.tex
@@ -25,12 +25,12 @@ information that we want to obtain. The design of a system will allow that, base
 
 For this it will be necessary to have a solid knowledge of the dataset that is needed, the values, their units and how they relate to each other.
 
-\subsubsection*{How to solve it} 
+\subsubsection*{Suggested strategies} 
 
 Study the objective sought and resort to the help of experts if necessary to acquire the necessary knowledge
 on the subject. Design a model that provides the information we are looking for.
 
-\subsubsection*{How we solve it. Aire Guru} 
+\subsubsection*{In the context of Aire Guru \ldots} 
 
 Aire Guru aims to increase the awareness of the level of pollution that surrounds us. To do this, it uses a measure called
 the air quality index (AQI), specifically the European air quality index (EAQI).
