--- a/contents/accessible/let_the_world_know_that_you_exist.tex
+++ b/contents/accessible/let_the_world_know_that_you_exist.tex
@@ -3,10 +3,10 @@
 No matter how optimized the representation of the data is and how available we make it, if users are not aware
 of the existence of the resource, they can not use it.
 
-\subsubsection*{How to solve it} 
+\subsubsection*{Suggested strategies} 
 The best way is to advertise the product in the right media with right format.
 
-\subsubsection*{How we solve it. Aire Guru} 
+\subsubsection*{In the context of Aire Guru \ldots} 
 Our tool is implemented for the city of Málaga, so we are currently working to publicize it in this city.
 It is currently available in the open data portal in the web site tab (https://datosabiertos.malaga.eu/aplicaciones) \\
 Aire Guru participated in the first open data reuse contest organized by the Málaga City Council (http://cemi.malaga.eu/es/novedades/detalle/1-Concurso-de-Reutilizacion-de-Datos-Abiertos-del-Ayuntamiento-de-Malaga)
