--- a/contents/accessible/make_your_data_available.tex
+++ b/contents/accessible/make_your_data_available.tex
@@ -14,14 +14,14 @@ the data will be represented in a table and even then, it will often be quite di
 
 Therefore, we can not say that data interfaces are commonly accessible in a useful way for the average user. \\
 
-\subsubsection*{How can we solve the problem?} 
+\subsubsection*{Suggested strategies} 
 
 We must provide the information required by the user in an uncomplicated manner, in a format that is easy to read and interpret, and we must describe it in a way that is easy to understand and quick to digest..
 
 In order to collect the information which is relevant to the user, we will need to carry out processes such as extraction, transformation and
 data cleaning.
  
-\subsubsection*{How we solve it using Aire Guru.} 
+\subsubsection*{In the context of Aire Guru \ldots} 
 
 Our tool uses the air quality data provided by the city of Málaga in its open data portal.(https://datosabiertos.malaga.eu/)\\
 \begin{figure}[ht]
