--- a/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
+++ b/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
@@ -5,7 +5,7 @@ the ordinary person, using common vocabulary, avoiding specialist jargon and com
 clearest manner. This representation of information plays a fundamentally important role, enabling the user to absorb 
 the meaning in a natural way.
 
-\subsubsection*{How to solve it} 
+\subsubsection*{Suggested strategies} 
 Consider what type of representational format is most appropriate to the task. If it is not possible, we will provide de 
 resources needed to help the user to understand and place the information in context. 
 
@@ -17,7 +17,7 @@ If we decide that a using graph is the best solution, we must consider carefully
 if we talk about samples and we want to know the density, we will lean towards a density graph, and if we look for the difference
 between sexes, we will use a pie chart.
 
-\subsubsection*{How we solve it. Aire Guru} 
+\subsubsection*{In the context of Aire Guru \ldots} 
 The Aire Guru tool presents the information in the native language of the city, using simple vocabulary and a 
 straightforward style.
 Colors and graphic resources are used as icons. In addition, a unified design structure to represent data has 
