--- a/contents/aire_guru/_section.tex
+++ b/contents/aire_guru/_section.tex
@@ -1,10 +1,6 @@
 \newpage
 \section{Aire Guru}
 
-Government open data portals make a huge effort to collect data and make it available to their citizens.
-However, this data is often wasted, since it is not always in effectively accessible, relevant and compelling
-for the average citizen. Air quality data is one such example.
-
 Urban residents are surrounded by many sources of air pollution, and it is the direct cause of many different symptoms,
 ranging from simple eye irritation 
 to, in extreme cases, death. Particularly for high-risk groups like children and the elderly.
@@ -88,12 +84,12 @@ Below we can see examples. The first one is taken from the European open data po
     \caption{Open Data Examples}
 \end{figure}
     
-\subsubsection*{How to solve it}
+\subsubsection*{Suggested strategies}
 
 We obtain our required data through a series of processes such as extraction, transformation and
 cleaning of the data. Without automation, these processes are tedious and time consuming. 
 
-\subsubsection*{How we solve it. Aire Guru} 
+\subsubsection*{In the context of Aire Guru \ldots} 
 
 The extracted data is in GeoJSON format, a format which provides a JSON object with nested subdocuments. Each of these
 subdocuments contains a set of data in key-value form.
