--- a/contents/compelling/engage_the_user_on_an_emotional_level.tex
+++ b/contents/compelling/engage_the_user_on_an_emotional_level.tex
@@ -16,7 +16,7 @@ emotional impulses. We may wish the world to be a rational place driven by the c
 It is well known in advertising, PR, and politics, that emotion easily trumps reason - these fields have turned the art of emotional engagement into a scientific discipline.
 As have companies like Facebook, Apple and Google.
 
-\subsubsection*{How to solve it}
+\subsubsection*{Suggested strategies}
 
 So, we must create desire. Whether that is a desire to know more, a desire to see 'what happens next' or a desire to avoid a negative outcome.
 Avoiding a negative outcome innevitably involves invoking some fear. Before we cast this as some Machiavellian evil, consider that the simple
@@ -32,7 +32,7 @@ effects. Where real-time data is available, allow users to set alarms so that th
 life in an ongoing fashion. It is important not to overdo that however - alerts that cannot be easily cancelled create a negative emotion that you
 definitely want to avoid. \\
 
-\subsubsection*{How we solve it. Aire Guru}
+\subsubsection*{In the context of Aire Guru \ldots}
 
 Aire-Guru uses three specific techniques to generate emotional engagement:
 
