--- a/contents/compelling/make_sure_your_data_is_reliable.tex
+++ b/contents/compelling/make_sure_your_data_is_reliable.tex
@@ -39,7 +39,7 @@ Document \\
 \caption{Example source source document}
 \end{figure}
 
-\subsubsection*{How to solve it} 
+\subsubsection*{Suggested strategies} 
 The first step is to compare the information with the source of origin. With the dataset and the definition
 of each of the fields, the scale and interpretability of the fields and values must be checked.
 Then we can perform different analysis of the data to check its consistency and compliance.
@@ -47,7 +47,7 @@ It is possible to use different graphs and see if there are extreme or strange v
 Database analysis tools can tell us the completeness of the fields, that is, what percentage of the
 samples contain each field.
 
-\subsubsection*{How we solve it. Aire Guru} 
+\subsubsection*{In the context of Aire Guru \ldots} 
 The source of data is verified by both the CEMI (Málaga information center) and UrbanClouds, the private company
 that collects and sends the data to the city of Málaga.
 With the description of the data in the open data portal of Málaga and the information received by UrbanClouds,
