--- a/contents/compelling/show_the_user_that_you_are_trustworthy.tex
+++ b/contents/compelling/show_the_user_that_you_are_trustworthy.tex
@@ -6,14 +6,14 @@ For this we must follow both the legal norms and an ethics of good practices.
 Do not require user identification merely to show general information.
 Always ask for permission to capture data and make clear what it will be used for.
 
-\subsubsection*{How to solve it} 
+\subsubsection*{Suggested strategies} 
 Use secure platforms, such as SSL if we develop a web application.
 If we use third-party APIs, make sure to check the level of security they offer.
 Implement a system that does not allow linking the data with a user.
 Give the user the possibility to delete their data if they wish.
 
 
-\subsubsection*{How we solve it. Aire Guru} 
+\subsubsection*{In the context of Aire Guru \ldots} 
 In our case, security is high, since for our main purpose, personal history
 of exposure to contamination, it is not essential to collect the user's details.
 SSL has been used to achieve a level of competent security, which guarantees the encryption of
