--- a/contents/compelling/solve_a_real_problem.tex
+++ b/contents/compelling/solve_a_real_problem.tex
@@ -14,14 +14,14 @@ When we have some data that is updated periodically, we must think in what way t
 changes Here comes the representation of the information in a way that awakens the need for data monitoring by
 of the user.
 
-\subsubsection*{How to solve it} 
+\subsubsection*{Suggested strategies} 
 First of all discover in what way the data can help users. Next we have to find a way to let him see
 because they are important to him and how he can benefit from using them in his daily life.
 If the data is updated periodically, it is necessary to analyze what type of variations are important in the user's daily life.
 Conduct a market study and see if there are already products that offer this information. If this is the case, it will be analyzed because
 It is attractive to the user and try to improve it.
 
-\subsubsection*{How we solve it. Aire Guru} 
+\subsubsection*{In the context of Aire Guru \ldots} 
 The user is offered a platform that indicates his exposure to totally customized air pollution if the need to carry
 no device for reading pollutans.
 
