--- a/contents/compelling/the_user_interface_must_be_obvious_and_familiar.tex
+++ b/contents/compelling/the_user_interface_must_be_obvious_and_familiar.tex
@@ -23,7 +23,7 @@ When we speak of fluidity, we refer to user-system interactions.It is important 
 be like a two-way conversation, where we ask and let them know we are listening and responding. When the user
 requires information from the system, they receive an indication that their request is being processed, and within no more than five seconds, an answer will be provided.
     
-\subsubsection*{How to solve it} 
+\subsubsection*{Suggested strategies} 
 We must analyze carefully what information we want to presentaccording to our objetive. We will make a clear design, where all the elements are easy to recognize.
 The structure will entail a logical sequence, as if it were a narrative history.
 Each action that the user perform, must be clearly acknowledged (eg by some change in a button, or a spinning wheel icon) results must be delivered in less than five seconds.
@@ -31,7 +31,7 @@ We will steer clear of complicated representations, we will aim for familiarity 
 For example, if a calendar is used for the selection of dates, it doesn't make sense to use an hourglass, this will just be confusing forthe user.
 Offer flexibility, the user must be able to interact with the interface and choose what they want to see.
 
-\subsubsection*{How we solve it. Aire Guru} 
+\subsubsection*{In the context of Aire Guru \ldots} 
 Our tool uses an interpretation of Google's Material Design, which is very clean, without borders or decorations.
 We chose a range of blue shades in combination with white and gray to evoke a relaxed atmosphere.
 Importantly, we've taken care that all text has a good level of contrast with the background, so that it is easy to read.
