--- a/contents/compelling/your_site_should_look_good.tex
+++ b/contents/compelling/your_site_should_look_good.tex
@@ -23,11 +23,11 @@ we want to highlight something in particular! \\
 To be able to hook our users, gamification is currently widely used. This is where we give a gaming aspect to the representation of the data. The user tries it because it catches their attention, it's fun.
 Certainly, at some point the novelty wears off, but, even so, the user has learned to use the interface and now feels well-disposed to continue to use it.
 
-\subsubsection*{How to solve it} 
+\subsubsection*{Suggested strategies} 
 To make an attractive design, we must keep abreast of current trends, as well as study good design practices.
 It is highly recommended to maintain a simple and clean design, to use standards and mechanisms that are familiar to users,
 to care of details and to present our identity.
-\subsubsection*{How we solve it. Aire Guru} 
+\subsubsection*{In the context of Aire Guru \ldots} 
 As we commented previously the design has been based on Google's Material Design, using straight lines, differentiating individual sections by using rectangles and using colors that contrast the information from the background.
 The background color for the graphics is a neutral white. Only shades of blue, gray and white are used. In addition, we have chosen a font that is easy to read.
 
