--- a/contents/introduction/structure_of_this_document.tex
+++ b/contents/introduction/structure_of_this_document.tex
@@ -1,17 +1,19 @@
-\subsection*{The structure of this document}
+\subsection{The structure of this document}
 
-In the following sections, a tour through the necessary steps to make this data
-accessible, relevant and compelling for the average user.
-The objective of this chapter is to stipulate the necessary points to use the data in a profitable manner and
-to help us in our day to day in a useful way. These concepts have been applied in the Air Guru project,
-that brings the data to users in an easy, friendly, compressible and adapted to their needs. \\
+We first provide a short introduction to the Aire Guru project in order to provide context. \\
 
-In this chapter we will see how to make the data accessible, relevant and compelling for 
-the average user. For each one of the secluded ones, we will see the theory, as it has been applied
-in the Air Guru project and its evaluation.
-Next, we will see a general evaluation of these three concepts and to finish the 
-obtained conclusions. \\
+In the following sections, we provide a set of guidelines that can be used to make big data
+accessible, relevant and compelling for the average user. Such principles are applicable to 
+online products in general, but we consider them here with special reference to presenting
+data, as opposed to e.g. social media sites. \\
 
-This chapter is written with the objectives we want to achieve in mind for the reusing of bigData. It means, make the 
-concepts accessible, relevant and compelling. It intents to be a guide which show these principles
-in its structure.
+Firstly, we deal with with general preliminaries, that in a commercial context would be called
+'Market Research' and 'The Business Case'. These ideas are just as applicable to the delivery of
+public-good data as commercial offerings. \\
+
+We then present 14 specific principles, classified into three categories: Accessible, Relevent, and Compelling.
+Each principle is described, along with suggested strategies to achieve that goal, and we then show
+how that principle is reflected in the context of our Aire Guru project. We conclude with some
+general comments, and provide a suggested reading list for each major section. \\
+
+We have designed this chapter according to these self-same principles, where applicable.
