--- a/contents/preliminaries/understand_your_purpose.tex
+++ b/contents/preliminaries/understand_your_purpose.tex
@@ -17,12 +17,12 @@ This is where we can make use of the most appropriate marketing techniques to re
 We will have to conduct a study of our target audience, find out what type of advertising they consume and through which channels, so we can approach them in the most appropriate way. Todays market is in a fast paced state of continuous change,
 so we must be flexible and adapt to find the perfect formula.
 
-\subsubsection*{How to solve it} 
+\subsubsection*{Suggested strategies} 
 We must study and analyze what the current gaps in the market are, and what needs the user might have that aren't being met.
 We need to define the target audience. What do they use in their daily life to keep informed or for entertainment? What type of advertising do they already consume? How can we get closer to them? Keep in mind that we must stay
 faithful to the spirit of what we represent, so as well as understanding what advertising fits the user, we should know what kind of advertising
 adapts most suitably to our product.
-\subsubsection*{How we solve it. Aire Guru} 
+\subsubsection*{In the context of Aire Guru \ldots} 
 The mission of Aire Guru is to increase the awareness of the quality of the air.
 There are several problems regarding this issue, the first one is user ignorance. Users may not be
 aware of the levels of pollution to which they are exposed and may not even know how it pollution can harm them
