--- a/contents/relevant/the_facts_and_just_the_facts.tex
+++ b/contents/relevant/the_facts_and_just_the_facts.tex
@@ -15,11 +15,11 @@ sure of his reading of the data, since when we direct the user to official sourc
 get a real explanation, reinforce the credibility of the representations we are making. In any case,
 outside of the main representation, because the user will not have to access this information continuously.
 
-\subsubsection*{How to solve it} 
+\subsubsection*{Suggested strategies} 
 Focus on the objective, show only the data directly related to our goal, do not annotate the data
 simply because it appears in the dataset, and don't include distracting technical details irrelevant to the user.
 
-\subsubsection*{How we solve it. Aire Guru} 
+\subsubsection*{In the context of Aire Guru \ldots} 
 
 The dataset used contains data such as the identifier of the measurement station, whether the station is fixed or mobile
 and extra-specific measures for an application that is provided by the same company that collects the data. This data is not useful for us.
