--- a/contents/introduction/_section.tex
+++ b/contents/introduction/_section.tex
@@ -1,18 +1,24 @@
 \newpage
 \section{Introduction}
 
-With the passage of the years we have seen in the processing of the data a golden opportunity, 
-both to improve our daily life and to try to predict
-future events. For this reason, the tendency arises to store all the data we have
-around us with the hope that one day they will be treated.
-As for the moment they have no specific purpose, everything is stored completely, without discrimination.
-Without knowing if at some point they will be useful or not. \\
+Making scientific and technical information available to the general public has always been a challenge.
+Often such information, the use of which could be of enormous benefit to the public, falls on deaf ears.\\
 
-On the other hand, multiple companies, both public and private, including our governments, 
-in their commitment to transparency and / or hope to take advantage of it, they publish this data 
-periodically \\
+We now have access to a new form of scientific data - 'big data' - massive numbers of data points.
+This data is accumulating at enormous rates, and their is an obvious desire to use it, both for
+commercial and 'public good' reasons.\\
 
-Although these data are available to all users, it does not mean that they are useful for the 
-average user, since he faces multiple challenges. \\
+We have ways of delivering this information that are effectively free, and can be made extremely compelling
+if presented in the right way. This chapter is a guide to 'the right way'.\\
+
+We have created a tool - Aire Guru - which collects air pollution data periodically, stores it for historical use, 
+processes it to extract relevant information, personalizes it to engage the user with regard to their individual
+circumstance, visualizes it in an easy to understand format, and provides it online to facilitate its accessibility. Furthermore,
+descriptions of all the data and how it has been processed are also provided to raise public awareness of the value
+of this data.\\
+
+While developing Aire Guru, and later reflecting on the process and success of the project, we we motivated to codify
+some of the lessons learnt in bringing somewhat dry and technical data to the general public, in a way that made it 
+accessible, relevent, and compelling.\\
 
 \input{contents/introduction/structure_of_this_document.tex}
