--- a/contents/relevant/present_consequences_and_outcomes.tex
+++ b/contents/relevant/present_consequences_and_outcomes.tex
@@ -16,12 +16,12 @@ The points that should be clear in the design phase are: \\
 \textbf{Data workflow}. When planning the flow of information, it must be clear how to get from one point to another. For example, 
 we should start simple and move to more complex representations.
 
-\subsubsection*{How to solve it} 
+\subsubsection*{Suggested strategies} 
 Once a goal has been set, we must stipulate the necessary fields of the dataset that we need. That is, we select the fields that interest us. 
 Following this, we need to analyze the data provided and see if the list of fields that the source offers us is sufficient to rech the chosen objective.
 If not directly, we the combination of them. Next, we decide which values are more outstanding and we will provide them to the user.
 
-\subsubsection*{How we solve it. Aire Guru} 
+\subsubsection*{In the context of Aire Guru \ldots} 
 Our main objective is to create awareness of the importance of air pollution in our health. For this we investigate different concepts:
 \begin{itemize}
     \item What diseases are affected by air pollution
